--- a/admission.html
+++ b/admission.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admission - Oddbods Nursery, Daycare & Kindergarten</title>
+    <title>Admission - Oddbods Junior, Kindergarten & Daycare Center</title>
     <link href="remixicon.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>* {
@@ -406,15 +406,16 @@ footer {
                 <img src="assets/badge.jpg">
                 <div>
                     <div style="font-size: 1.6rem; margin-bottom: -12px; margin-top:-6px;">ODDBODS</div>
-                    <div style="font-size: 0.7rem; font-weight: 500;">Nursery, Daycare & Kindergarten</div>
+                    <div style="font-size: 0.7rem; font-weight: 500;">Junior, Kindergarten & Daycare Center</div>
                 </div>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="programs.html">Programs</a></li>
                 <li><a href="admission.html">Admission</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="dW.html">Director's Word</a></li>
                 <li><a href="admission.html" class="enroll-btn">Enroll Now</a></li>
             </ul>
             <button class="mobile-menu-btn ri-menu-line" onclick="bar()"></button>
@@ -687,14 +688,14 @@ footer {
             <div class="footer-contact">
                 <h4>Keep in Touch</h4>
                 <p><i class="ri-map-pin-line"></i> Makindye Lukuli, Kampala</p>
-                <p><i class="ri-phone-line"></i> +256 XXX XXX XXX</p>
-                <p><i class="ri-mail-line"></i> info@oddbods.ug</p>
+                <p><i class="ri-phone-line"></i>  +256 772 436 179</p>
+                <p><i class="ri-mail-line"></i> info@oddbodsschool.com</p>
                 <p><i class="ri-time-line"></i> Mon-Fri: 7AM - 6PM</p>
             </div>
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2024 Oddbods Nursery, Daycare & Kindergarten. All rights reserved.</p>
+            <p>&copy; 2025 Oddbods Oddbods Junior, Kindergarten & Daycare Center. All rights reserved.</p>
             <p><a href="tel: 256753943599" style="color:#fff">Developed and Maintained By Amanda Technologies</a></p>
         </div>
     <script>
