--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@ nav {
         <div class="hero-text">
             <h1>
                 <span class="empowering">Empowering</span><br>
-                students from small<br>
+                children from small<br>
                 age <span class="vision">towards vision</span>
             </h1>
             <p>With courage, confidence, creativity, and compassion to make their unique contribution in a diverse and dynamic world.</p>
