--- a/programs.html
+++ b/programs.html
@@ -971,7 +971,7 @@ nav {
                 </div>
 
                 <div class="timeline-item">
-                    <div class="time-label">4:00 - 6:00 PM</div>
+                    <div class="time-label">4:00 PM +</div>
                     <div class="activity-name">Snack & Departure</div>
                     <div class="activity-description">Afternoon snack, free play, outdoor time, and flexible pick-up</div>
                 </div>
@@ -1059,7 +1059,7 @@ nav {
                 <p><i class="ri-map-pin-line"></i> Makindye Lukuli, Kampala</p>
                 <p><i class="ri-phone-line"></i>  +256 772 436 179</p>
                 <p><i class="ri-mail-line"></i> info@oddbodsschool.com</p>
-                <p><i class="ri-time-line"></i> Mon-Fri: 7AM - 6PM</p>
+                <p><i class="ri-time-line"></i> Mon-Fri: 7AM - 4PM</p>
             </div>
         </div>
         
